fix: fix spacing on mobile

--- a/styles/education.css
+++ b/styles/education.css
@@ -18,7 +18,7 @@
 .education__card {
     width: 90%;
     max-width: 800px;
-    height: 200px;
+    padding: 2.4rem 0;
 
     border: 1px solid black;
     border-radius: 0.3rem;
@@ -27,6 +27,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    gap: 1.6rem;
 }
 
 .education__card-title {
